fix: date picker alignment and prefilled

--- a/src/components/taskDetails/task-details.module.scss
+++ b/src/components/taskDetails/task-details.module.scss
@@ -36,6 +36,12 @@
         background-color: $theme-primary;
         color: $white;
     }
+
+    &:disabled {
+        background-color: $light-gray;
+        color: $black;
+        cursor: not-allowed;
+    }
 }
 
 .gitLink {
@@ -182,6 +188,7 @@
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 0.25rem;
+    margin-top: -10px;
 }
 
 .assigneeSuggestionInput {
